--- a/Game/Game.fsproj
+++ b/Game/Game.fsproj
@@ -1,12 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="Field.fs" />
+    <Compile Include="Game.fs" />
+    <Compile Include="Serialization.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
-
 </Project>
