Basic python observer done.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@ obj
 
 .fake
 __pycache__
+
+# Distribution
+build/
+
+# elm-package generated files
+elm-stuff
+
+# elm-repl generated files
+repl-temp-*
+
+# Dependency directories
+node_modules
+
+# Desktop Services Store on macOS
+.DS_Store
+
+*.mp4
